--- a/bonsai/examples/rpc_chat/server/src/dune
+++ b/bonsai/examples/rpc_chat/server/src/dune
@@ -3,7 +3,7 @@
  (libraries async_extra.async_bus bonsai_chat_common cohttp_static_handler
   simple_web_server))
 
-(rule (targets embedded_files.ml embedded_files.mli)
- (deps %{workspace_root}/app/embed-file/bin/embed_file.exe
-  ../../client/main.bc.js ../../client/style.css)
- (action (bash "%{deps} -output embedded_files")))
+; (rule (targets embedded_files.ml embedded_files.mli)
+;  (deps %{workspace_root}/app/embed-file/bin/embed_file.exe
+;   ../../client/main.bc.js ../../client/style.css)
+;  (action (bash "%{deps} -output embedded_files")))
