--- a/incremental/test-debug/dune
+++ b/incremental/test-debug/dune
@@ -10,6 +10,6 @@
   (glob_files ../test/*.mli))
  (action (bash ./%{first_dep})))
 
-(rule (targets explicit_dependencies.ml explicit_dependencies.mli)
- (deps %{workspace_root}/bin/gen-explicit-dependencies.sh)
- (action (bash "%{deps} incremental")))
+; (rule (targets explicit_dependencies.ml explicit_dependencies.mli)
+;  (deps %{workspace_root}/bin/gen-explicit-dependencies.sh)
+;  (action (bash "%{deps} incremental")))
