--- a/ppx_expect/example/dune
+++ b/ppx_expect/example/dune
@@ -1,9 +1,9 @@
 (library (name expect_test_examples) (libraries core async)
  (preprocess (pps ppx_jane)))
 
-(rule (targets tabs.ml) (deps (:first_dep tabs.ml.in) jbuild)
+(rule (targets tabs.ml) (deps (:first_dep tabs.ml.in))
  (action
   (bash
-   "cp %{first_dep} %{targets}; %{bin:apply-style} -directory-config jbuild -in-place %{targets}")))
+   "cp %{first_dep} %{targets};")))
 
 (alias (name DEFAULT) (deps tests.ml.pp))
