--- a/ppx_expect/negative-tests/dune
+++ b/ppx_expect/negative-tests/dune
@@ -1,19 +1,19 @@
 (library (name expect_test_negative_tests) (libraries core)
  (preprocess (pps ppx_jane)))
 
-(rule
- (deps (:first_dep ./inline_tests_runner) ./inline_tests_runner.exe
-  (glob_files *.ml))
- (targets glob.ml.corrected exn.ml.corrected exn_missing.ml.corrected
-  exn_and_trailing.ml.corrected regexp.ml.corrected exact.ml.corrected
-  spacing.ml.corrected trailing.ml.corrected missing.ml.corrected
-  tag.ml.corrected string_padding.ml.corrected semicolon.ml.corrected
-  flexible.ml.corrected normal_strings.ml.corrected
-  pending_output.ml.corrected functor.ml.corrected
-  function_with_distinct_outputs.ml.corrected test-output)
- (action
-  (bash
-   "rm -f *.ml.corrected 2>/dev/null; ! %{first_dep} -diff-cmd true -allow-output-patterns 2> test-output")))
+; (rule
+;  (deps (:first_dep ./inline_tests_runner) ./inline_tests_runner.exe
+;   (glob_files *.ml))
+;  (targets glob.ml.corrected exn.ml.corrected exn_missing.ml.corrected
+;   exn_and_trailing.ml.corrected regexp.ml.corrected exact.ml.corrected
+;   spacing.ml.corrected trailing.ml.corrected missing.ml.corrected
+;   tag.ml.corrected string_padding.ml.corrected semicolon.ml.corrected
+;   flexible.ml.corrected normal_strings.ml.corrected
+;   pending_output.ml.corrected functor.ml.corrected
+;   function_with_distinct_outputs.ml.corrected test-output)
+;  (action
+;   (bash
+;    "rm -f *.ml.corrected 2>/dev/null; ! %{first_dep} -diff-cmd true -allow-output-patterns 2> test-output")))
 
 (alias (name runtest) (deps exn.ml.corrected.expected exn.ml.corrected)
  (action (bash "diff -a %{deps}")))
