--- a/async/async_rpc/example/dune
+++ b/async/async_rpc/example/dune
@@ -1,2 +1,2 @@
-(executables (names profile_rpc rpc_client rpc_server)
- (libraries async bin_prot ocaml_value_size) (preprocess (pps ppx_jane)))
+; (executables (names profile_rpc rpc_client rpc_server)
+;  (libraries async bin_prot ocaml_value_size) (preprocess (pps ppx_jane)))
