--- a/async_js/example-server/dune
+++ b/async_js/example-server/dune
@@ -1,2 +1,2 @@
-(executables (names key_value_store)
- (libraries core async cohttp_async_lib uri) (preprocess (pps ppx_jane)))
+; (executables (names key_value_store)
+;  (libraries core async cohttp_async_lib uri) (preprocess (pps ppx_jane)))
