--- a/core_kernel/binary_packing/test-bin/dune
+++ b/core_kernel/binary_packing/test-bin/dune
@@ -1,7 +1,7 @@
-(alias (name runtest) (deps (:first_dep test_binary_packing.exe))
- (action (bash ./%{first_dep})))
+; (alias (name runtest) (deps (:first_dep test_binary_packing.exe))
+;  (action (bash ./%{first_dep})))
 
-(executables (names test_binary_packing)
- (libraries binary_packing binary_packing_test core oUnit
-  quickcheck_deprecated)
- (preprocess (pps ppx_jane)))
+; (executables (names test_binary_packing)
+;  (libraries binary_packing binary_packing_test core oUnit
+;   quickcheck_deprecated)
+;  (preprocess (pps ppx_jane)))
