--- a/bonsai/examples/rpc_chat/server/bin/dune
+++ b/bonsai/examples/rpc_chat/server/bin/dune
@@ -1,2 +1,2 @@
-(executables (names main) (libraries bonsai_chat_native)
- (preprocess (pps ppx_jane)))
+; (executables (names main) (libraries bonsai_chat_native)
+;  (preprocess (pps ppx_jane)))
