--- a/bonsai/examples/rpc_chat/server/src/dune
+++ b/bonsai/examples/rpc_chat/server/src/dune
@@ -1,7 +1,7 @@
-(library (name bonsai_chat_native)
- (preprocess (pps ppx_jane -annotated-ignores))
- (libraries async_extra.async_bus bonsai_chat_common cohttp_static_handler
-  simple_web_server))
+; (library (name bonsai_chat_native)
+;  (preprocess (pps ppx_jane -annotated-ignores))
+;  (libraries async_extra.async_bus bonsai_chat_common cohttp_static_handler
+;   simple_web_server))
 
 ; (rule (targets embedded_files.ml embedded_files.mli)
 ;  (deps %{workspace_root}/app/embed-file/bin/embed_file.exe
