--- a/core/iobuf_unix/test/dune
+++ b/core/iobuf_unix/test/dune
@@ -1,3 +1,3 @@
-(library (name iobuf_unix_test)
- (libraries bigstring_unix iobuf_unix iobuf_test)
- (preprocess (pps ppx_jane)))
+; (library (name iobuf_unix_test)
+;  (libraries bigstring_unix iobuf_unix iobuf_test)
+;  (preprocess (pps ppx_jane)))
