Work around missing krb

--- a/incr_dom/example/test_backpressure/native_client/dune
+++ b/incr_dom/example/test_backpressure/native_client/dune
@@ -1,2 +1,2 @@
-(executables (names main) (libraries async krb core backpressure_test_shared)
- (preprocess (pps ppx_jane)))
+; (executables (names main) (libraries async krb core backpressure_test_shared)
+;  (preprocess (pps ppx_jane)))
