--- a/pythonlib/examples-gen/dune
+++ b/pythonlib/examples-gen/dune
@@ -1,2 +1,2 @@
-(executables (names python_gen) (preprocess (pps ppx_let ppx_python))
- (libraries base compiler-libs.common pyml python_lib))
+; (executables (names python_gen) (preprocess (pps ppx_let ppx_python))
+;  (libraries base compiler-libs.common pyml python_lib))
