--- a/incr_map/test/benchmarks/dune
+++ b/incr_map/test/benchmarks/dune
@@ -1,3 +1,3 @@
-(library (name incr_map_benchmarks)
- (libraries core incremental incr_map incr_map_test)
- (preprocess (pps ppx_jane)))
+; (library (name incr_map_benchmarks)
+;  (libraries core incremental incr_map incr_map_test)
+;  (preprocess (pps ppx_jane)))
