--- a/incr_map/test/benchmarks/flamegraph_generation_tools/dune
+++ b/incr_map/test/benchmarks/flamegraph_generation_tools/dune
@@ -1,2 +1,2 @@
-(executables (names html_table) (libraries incr_map_benchmarks)
- (preprocess (pps ppx_jane)))
+; (executables (names html_table) (libraries incr_map_benchmarks)
+;  (preprocess (pps ppx_jane)))
