--- a/async_js/test/lib/dune
+++ b/async_js/test/lib/dune
@@ -1,2 +1,2 @@
-(library (name async_js_test_lib)
- (libraries async_kernel async_rpc_kernel uri) (preprocess (pps ppx_jane)))
+; (library (name async_js_test_lib)
+;  (libraries async_kernel async_rpc_kernel uri) (preprocess (pps ppx_jane)))
