--- a/re2/src/dune
+++ b/re2/src/dune
@@ -1,4 +1,5 @@
 (library (name re2) (public_name re2)
+ (flags :standard -w -52)
  (libraries core_kernel re2_c core_kernel.rope) (virtual_deps conf-g++)
  (c_library_flags :standard -lstdc++ -lpthread) (cxx_names stubs)
  (cxx_flags (:standard -x c++ \ -pedantic) (-I re2_c/libre2))
