--- a/async_websocket/src/dune
+++ b/async_websocket/src/dune
@@ -1,3 +1,4 @@
 (library (name websocket) (public_name async_websocket)
+ (flags :standard -w -49)
  (libraries async core_kernel.binary_packing cryptokit)
  (preprocess (pps ppx_jane)))
