--- a/pam/example/dune
+++ b/pam/example/dune
@@ -1,1 +1,1 @@
-(executables (names simple) (libraries core pam) (preprocess (pps ppx_jane)))
+(executables (names simple) (modes native) (libraries core pam) (preprocess (pps ppx_jane)))
