--- a/pam/src/dune
+++ b/pam/src/dune
@@ -1,4 +1,5 @@
 (library (name pam) (public_name pam) (libraries core)
+ (modes native)
  (library_flags -cclib -lpam -ccopt -O2) (c_names pam_stubs)
  (virtual_deps conf-pam)
  (preprocess (pps ppx_jane -allow-unannotated-ignores)))
