Don't build bytecode executables in core_kernel tests

--- a/core_kernel/replace_caml_modify_for_testing/dune
+++ b/core_kernel/replace_caml_modify_for_testing/dune
@@ -1,4 +1,5 @@
 (library (name replace_caml_modify_for_testing)
+ (modes native)
  (library_flags -cclib -Xlinker -cclib --wrap -cclib -Xlinker -cclib
   caml_modify)
  (c_names replace_caml_modify_for_testing_stub)
