--- a/core_kernel/tuple_pool/test-bin/dune
+++ b/core_kernel/tuple_pool/test-bin/dune
@@ -1,4 +1,5 @@
 (executables (names tuple_pool_caml_modify_check)
+ (modes native)
  (libraries replace_caml_modify_for_testing tuple_pool)
  (preprocess (pps ppx_jane)))
 
